Fix text button for ja

--- a/frontend/src/assets/i18n/ja.json
+++ b/frontend/src/assets/i18n/ja.json
@@ -160,6 +160,7 @@
     "prevent_close_window":"Do not close the window",
     "did_issue":"Your DID  is issue successfully",
     "vc_issue_success":"Your VC  is Issue successfully",
-    "issue_vc":"Issue VC"
+    "issue_vc":"Issue VC",
+    "issue_did": "Issue DID"
 
 }
