--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -160,6 +160,11 @@
     "back":"Back",
     "prevent_close_window":"Do not close the window",
     "did_issue":"Your DID  is issue successfully",
+    "post_media_success":"Your media is posted issue successfully",
     "vc_issue_success":"Your VC  is Issue successfully",
+    "post_image":"Post Image",
+    "post_media":"Post Media",
+    "choose_other_image":"Choose other media",
     "issue_vc":"Issue VC"
+
 }
