--- a/frontend/src/assets/i18n/ja.json
+++ b/frontend/src/assets/i18n/ja.json
@@ -160,11 +160,13 @@
     "prevent_close_window":"Do not close the window",
     "did_issue":"Your DID  is issue successfully",
     "vc_issue_success":"Your VC  is Issue successfully",
+    "vc_issue_error":"Your VC  is Issue error, please try again",
     "issue_vc":"Issue VC",
     "issue_did": "Issue DID",
     "post_image":"Post Image",
     "post_media":"Post Media",
     "post_media_success":"Your media is posted issue successfully",
     "choose_other_image":"Choose other media",
-    "please-scan-using-authenticator": "Please scan using Authenticator"
+    "please-scan-using-authenticator": "Please scan using Authenticator",
+    "vp-confirm-error": "VC verification failed, please try again"
 }
